Handle top view status correctly for Mac full screen mode

On Mac, by default the top view (tab strip and toolbar etc.) should show
up unless the user explicitly toggle the option to hide the top view.
So, this CL fixes whether to hide the top view according to whether it
is in full screen mode as well as user's choice.

This CL also adds a test to make sure the top view's status is correct
across all platforms, especially on Mac.

BUG=835068,835067,831219

Change-Id: Iaec1c2eba5eebff5f012e6f02ca73a5aa0a8a08d
Reviewed-on: https://chromium-review.googlesource.com/1086123
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Wei Li <weili@chromium.org>
Cr-Commit-Position: refs/heads/master@{#564541}
Former-commit-id: 2d420e64d93157a657f1f73af263267f973040e0