chrome/browser/ui/views/frame/browser_view_interactive_uitest.cc
@@ -11,6 +11,10 @@
 #include "chrome/test/base/in_process_browser_test.h"
 #include "chrome/test/views/scoped_macviews_browser_mode.h"
 
+#if defined(OS_MACOSX)
+#include "chrome/browser/ui/browser_commands_mac.h"
+#endif
+
 using views::FocusManager;
 
 namespace {
@@ -47,4 +51,41 @@ IN_PROC_BROWSER_TEST_F(BrowserViewTest, MAYBE_FullscreenClearsFocus) {
 
   // Focus is released from the location bar.
   EXPECT_FALSE(location_bar_view->Contains(focus_manager->GetFocusedView()));
+}
+
+// Test whether the top view including toolbar and tab strip shows up or hides
+// correctly in full screen mode.
+IN_PROC_BROWSER_TEST_F(BrowserViewTest, FullscreenShowTopView) {
+  BrowserView* browser_view = static_cast<BrowserView*>(browser()->window());
+
+  // The top view should always show up in regular mode.
+  EXPECT_FALSE(browser_view->IsFullscreen());
+  EXPECT_TRUE(browser_view->IsTabStripVisible());
+
+  // Enter into full screen mode.
+  chrome::ToggleFullscreenMode(browser());
+  EXPECT_TRUE(browser_view->IsFullscreen());
+
+#if defined(OS_MACOSX)
+  // The top view should show up by default.
+  EXPECT_TRUE(browser_view->IsTabStripVisible());
+
+  // Return back to normal mode and toggle to not show the top view in full
+  // screen mode.
+  chrome::ToggleFullscreenMode(browser());
+  EXPECT_FALSE(browser_view->IsFullscreen());
+  chrome::ToggleFullscreenToolbar(browser());
+
+  // While back to full screen mode, the top view no longer shows up.
+  chrome::ToggleFullscreenMode(browser());
+  EXPECT_TRUE(browser_view->IsFullscreen());
+  EXPECT_FALSE(browser_view->IsTabStripVisible());
+#else
+  // In immersive full screen mode, the top view should show up; otherwise, it
+  // always hides.
+  if (browser_view->immersive_mode_controller()->IsEnabled())
+    EXPECT_TRUE(browser_view->IsTabStripVisible());
+  else
+    EXPECT_FALSE(browser_view->IsTabStripVisible());
+#endif
 }
